Refactor treesitter state into Database object